--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,11 @@ task clean(type: Delete) {
 }
 ext {
     dagger2Version = '2.16'
+    rxjava2Version = '2.1.9'
+    rxandroidVersion = '2.0.2'
+    recyclerViewVersion = '1.0.0'
+    lifecycleVersion = '2.0.0'
+    timberVersion = '4.5.1'
+    rx2FastAndroidNetworking = '1.0.1'
+
 }
