--- a/build.gradle
+++ b/build.gradle
@@ -35,5 +35,6 @@ ext {
     rx2FastAndroidNetworking = '1.0.2'
     lombokVersion = '1.18.6'
     materialVersion='1.0.0'
+    apacheCommonsVersion='2.6'
 
 }
