--- a/rflooker/build.gradle
+++ b/rflooker/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.abc.rflooker"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -63,5 +63,8 @@ dependencies {
     //lombok
     compileOnly "org.projectlombok:lombok:$rootProject.lombokVersion"
     annotationProcessor "org.projectlombok:lombok:$rootProject.lombokVersion"
+
+    //Apache files
+    implementation "commons-io:commons-io:$rootProject.apacheCommonsVersion"
 
 }
