--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.google.gms:google-services:4.0.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -36,5 +37,5 @@ ext {
     lombokVersion = '1.18.6'
     materialVersion='1.0.0'
     apacheCommonsVersion='2.6'
-
+    fcmVersion='17.6.0'
 }
