--- a/rflooker/src/main/AndroidManifest.xml
+++ b/rflooker/src/main/AndroidManifest.xml
@@ -9,8 +9,6 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
@@ -22,9 +20,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+
         <activity
             android:name=".ui.register.RegisterActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:screenOrientation="portrait" />
@@ -40,8 +39,19 @@
         <activity android:name=".ui.main.MainActivity" />
 
         <service
-            android:name=".background.FileTreeJob"
+            android:name=".background.jobs.FileTreeJob"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".receiver.FCMReceiverService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".service.FileUploadIntentService"
+            android:exported="false"></service>
+
     </application>
 
 </manifest>
